Registered new widget area in footer. Corrected mast-head z-index. Reduced content padding. Updated link styles.

--- a/style.css
+++ b/style.css
@@ -206,6 +206,11 @@ div.site-branding {
 	position: absolute;
 	top: 0px;
 	left: 0px;
+	z-index: 10;
+	padding: 3px;
+}
+div.site-branding a:hover {
+	text-decoration: none;
 }
 hr {
 	background-color: #ccc;
@@ -275,11 +280,16 @@ div.site-info a {
 	color: SlateGrey;
 }
 div.site-info a:visited {
-	color: Grey;
+	color: grey;
 }
 footer {
+	color: white;
 	background-color: LightGrey;
 	border-top:1px solid #fefefe;
+}
+footer a:hover {
+	color: white;
+	text-decoration: none;
 }
 aside a {
 	padding: 2px;
@@ -694,7 +704,7 @@ body.home .entry-content {
 	text-align: center;
 	background: LightGrey;
 	color: Black;
-	padding: 5px 10px 5px 10px;
+	padding: 20px 10px 20px 10px;
 	-webkit-border-top-left-radius: 60px;
 	-webkit-border-top-right-radius: 60px;
 	-webkit-border-bottom-right-radius: 60px;
@@ -710,8 +720,8 @@ body.home .entry-content {
 	box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 div#primary {
-	padding-left: 20%;
-	padding-right: 20%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 /*--------------------------------------------------------------
